--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">
+                <img id="logo" src="assets/logo.png" alt="">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -46,13 +48,18 @@
                         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button id="search-btn" class="btn btn-outline-success" type="button">Search</button>
-                </form>
             </div>
         </div>
     </nav>
+    <div class="search-box">
+        <div>
+            <form class="d-flex" role="search">
+                <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button id="search-btn" class="btn btn-outline-success" type="button">Search</button>
+            </form>
+            <p>Search for the photo you want...</p>
+        </div>
+    </div>
 
 
 
